build/myproject_kernel/kernel_wrapper/kernel_wrapper/solution/.autopilot/db/clang.err.log
In file included from /home/ayvol/vitis_accel_backend_test/kernel_wrapper.cpp:2:
In file included from /home/ayvol/vitis_accel_backend_test/firmware/myproject.h:6:
In file included from /tools/Xilinx/Vitis_HLS/2022.2/common/technology/autopilot/hls_stream.h:15:
/tools/Xilinx/Vitis_HLS/2022.2/common/technology/autopilot/hls_stream_39.h:52:37: error: expected ',' or '>' in template-parameter-list
template<typename __STREAM_T__, int 3=0>
                                    ^
/tools/Xilinx/Vitis_HLS/2022.2/common/technology/autopilot/hls_stream_39.h:72:81: error: too few template arguments for class template 'stream'
    inline __attribute__((always_inline)) __attribute__((nodebug)) stream(const stream< __STREAM_T__ >& chn):V(chn.V) {
                                                                                ^
/tools/Xilinx/Vitis_HLS/2022.2/common/technology/autopilot/hls_stream_39.h:53:7: note: template is declared here
class stream;
      ^
/tools/Xilinx/Vitis_HLS/2022.2/common/technology/autopilot/hls_stream_39.h:75:93: error: too few template arguments for class template 'stream'
    inline __attribute__((always_inline)) __attribute__((nodebug)) stream& operator= (const stream< __STREAM_T__ >& chn) {
                                                                                            ^
/tools/Xilinx/Vitis_HLS/2022.2/common/technology/autopilot/hls_stream_39.h:53:7: note: template is declared here
class stream;
      ^
/tools/Xilinx/Vitis_HLS/2022.2/common/technology/autopilot/hls_stream_39.h:163:37: error: expected ',' or '>' in template-parameter-list
template<typename __STREAM_T__, int 3>
                                    ^
In file included from /home/ayvol/vitis_accel_backend_test/kernel_wrapper.cpp:2:
/home/ayvol/vitis_accel_backend_test/firmware/myproject.h:12:10: error: too few template arguments for class template 'stream'
    hls::stream<input_t> &input_2,
         ^
/tools/Xilinx/Vitis_HLS/2022.2/common/technology/autopilot/hls_stream_39.h:164:7: note: template is declared here
class stream : public stream<__STREAM_T__, 0> {
      ^
In file included from /home/ayvol/vitis_accel_backend_test/kernel_wrapper.cpp:2:
/home/ayvol/vitis_accel_backend_test/firmware/myproject.h:13:10: error: too few template arguments for class template 'stream'
    hls::stream<result_t> &layer25_out
         ^
/tools/Xilinx/Vitis_HLS/2022.2/common/technology/autopilot/hls_stream_39.h:164:7: note: template is declared here
class stream : public stream<__STREAM_T__, 0> {
      ^
/home/ayvol/vitis_accel_backend_test/kernel_wrapper.cpp:4:52: error: too few template arguments for class template 'stream'
static void read_input(const in_buffer_t *in, hls::stream<in_stream_t> &input, int n) {
                                                   ^
/tools/Xilinx/Vitis_HLS/2022.2/common/technology/autopilot/hls_stream_39.h:164:7: note: template is declared here
class stream : public stream<__STREAM_T__, 0> {
      ^
/home/ayvol/vitis_accel_backend_test/kernel_wrapper.cpp:16:50: error: too few template arguments for class template 'stream'
static void write_result(out_buffer_t *out, hls::stream<out_stream_t> &output, int n) {
                                                 ^
/tools/Xilinx/Vitis_HLS/2022.2/common/technology/autopilot/hls_stream_39.h:164:7: note: template is declared here
class stream : public stream<__STREAM_T__, 0> {
      ^
/home/ayvol/vitis_accel_backend_test/kernel_wrapper.cpp:31:10: error: too few template arguments for class template 'stream'
    hls::stream<in_stream_t> input("input");
         ^
/tools/Xilinx/Vitis_HLS/2022.2/common/technology/autopilot/hls_stream_39.h:164:7: note: template is declared here
class stream : public stream<__STREAM_T__, 0> {
      ^
/home/ayvol/vitis_accel_backend_test/kernel_wrapper.cpp:32:10: error: too few template arguments for class template 'stream'
    hls::stream<out_stream_t> output("output");
         ^
/tools/Xilinx/Vitis_HLS/2022.2/common/technology/autopilot/hls_stream_39.h:164:7: note: template is declared here
class stream : public stream<__STREAM_T__, 0> {
      ^
/home/ayvol/vitis_accel_backend_test/kernel_wrapper.cpp:33:29: warning: invalid variable expr  [-Winvalid-hls-pragmas]
#pragma HLS STREAM variable=input depth=(32 * 32)
                            ^
/home/ayvol/vitis_accel_backend_test/kernel_wrapper.cpp:34:29: warning: invalid variable expr  [-Winvalid-hls-pragmas]
#pragma HLS STREAM variable=output depth=1
                            ^
2 warnings and 10 errors generated.
